PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016, PHP 7.1.0

Core:
  . Fixed bug #62210 (Exceptions can leak temporary variables). (Dmitry, Bob)
  . Implemented the RFC `Support Class Constant Visibility`. (Sean DuBois,
    Reeze Xia, Dmitry)
  . Added void return type. (Andrea)

- FTP:
  . Implemented FR #55651 (Option to ignore the returned FTP PASV address).
    (abrender at elitehosts dot com)

Hash:
  . Added SHA3 fixed mode algorithms (224, 256, 384, and 512 bit). (Sara)

PDO_Firebird:
  . Fixed bug #60052 (Integer returned as a 64bit integer on X64_86). (Mariuz)

Pgsql:
  . Implemented FR #31021 (pg_result_notice() is needed to get all notice messages).

Standard:
  . Fixed bug #71100 (long2ip() doesn't accept integers in strict mode).
    (Laruence)
  . Implemented FR #55716 (Add an option to pass a custom stream context to
    get_headers()). (Ferenc)
  . Implemented FR #69359 (Provide a way to fetch the current environment
    variables). (Ferenc)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>